# agent-eval-harness

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: cascade.md  design-decisions.md  graders.md
schema/: 001_governance_cascade.sql  002_chatlpo_seed.sql  003_release_bundles.sql  004_eval_runs.sql  005_grader_calibration.sql  006_online_eval_slo.sql
src/agent_eval/: __init__.py  calibration.py  cascade.py  context.py  judges.py  online.py  registry.py  release.py  runner.py  sampling.py  slo.py  suite.py
src/agent_eval/examples/: __init__.py  agents.py  quickstart.py
src/agent_eval/graders/: __init__.py  base.py  code.py  model.py
suites/: educational_accuracy_lesson_planner.yaml  hallucination_guard_lesson_planner.yaml  safety_baseline.yaml
tests/: test_calibration_release.py  test_cascade.py  test_graders.py  test_runner.py  test_sampling_slo.py  test_suites_and_online.py
